# rst_news_aggregator

./: Cargo.toml  Project.md  Readme.md  config.toml  rustfmt.toml
.cargo/: config.toml
src/: analyzer.rs  config.rs  error.rs  fetcher.rs  main.rs  metrics.rs  model.rs  rate_limiter.rs
