# Cargo.toml (for a standalone project)

[package]
name = "news_aggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime & HTTP client
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "sync","signal"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Data serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CPU parallelism
rayon = "1.10"

# HTML Parsing
scraper = "0.20"

# Ergonomic error handling & logging
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Bridge for async + CPU work
tokio-rayon = "2.1"
tracing = "0.1.41"
thiserror = "2.0.17"
tokio-util = "0.7.16"
aho-corasick = "1.1.3"
once_cell = "1.21.3"
config = "0.15.18"
governor = "0.10.1"
num_cpus = "1.17.0"

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
